...
            UntrustedExternalNavigation.Fulfill(fulfill)
        else -> null
    }
}

internal const val UNTRUSTED_NAVIGATION_DIALOG_TAG = "untrusted_navigation_dialog"
internal const val UNTRUSTED_NAVIGATION_CONFIRM_TAG = "untrusted_navigation_confirm"
internal const val UNTRUSTED_NAVIGATION_CANCEL_TAG = "untrusted_navigation_cancel"

@Composable
internal fun UntrustedExternalNavigationConfirmationDialog(
    request: UntrustedExternalNavigation,
    onDismiss: () -> Unit,
...
